<resources>
    <string name="app_name">Walmart Compare</string>
    <string name="search_hint">Search term</string>
    <string name="no_results">No results 😓</string>
    <string name="product_price">$%.2f</string>
    <string name="loading_text">Loading</string>
    <string name="rating_bar_content_description">Rating %1$.0f out of 5 stars</string>
    <string name="review_count_text">(%1$d)</string>
    <string name="review_count_detail_view_text">%1$d reviews</string>
    <string name="review_count_content_description">%1$d reviews total</string>
    <string name="add_to_list">Add To List</string>
    <string name="add_to_list_button_content_description">add to list</string>
    <string name="about_this_item">About This Item</string>
    <string name="sample_short_description">The world\'s most popular portable gaming device is now even more fun. Listen to your favorite albums. Send text messages over Wi-Fi with iMessage. Record HD video. Make FaceTime calls. iPod touch even works with iCloud, which stores your content and pushes it to all your devices.</string>
    <string name="sample_long_description"><![CDATA[&lt;br&gt;&lt;b&gt;Apple iPod touch 32GB (4th Gen), Black:&lt;/b&gt;&lt;ul&gt;&lt;li&gt;Available in both black and white&lt;/li&gt;&lt;li&gt;Free text messaging over Wi-Fi with iMessage&lt;/li&gt;&lt;li&gt;Front and back cameras for HD video recording&lt;/li&gt;&lt;li&gt;FaceTime video calling&lt;/li&gt;&lt;li&gt;iOS 5 with over 200 new features&lt;/li&gt;&lt;li&gt;Game Center with more than 60 million members&lt;/li&gt;&lt;li&gt;App Store with more than 500,000 apps, including over 100,000 games and entertainment titles&lt;/li&gt;&lt;li&gt;iTunes Store with millions of songs, movies, and TV shows&lt;/li&gt;&lt;li&gt;iCloud, which wirelessly pushes your content to all your devices4&lt;/li&gt;&lt;li&gt;Rich HTML email&lt;/li&gt;&lt;li&gt;Safari web browser&lt;/li&gt;&lt;li&gt;Wi-Fi and Bluetooth wireless technology&lt;/li&gt;&lt;li&gt;Activation and setup over Wi-Fi&lt;/li&gt;&lt;li&gt;Nike+ support built in&lt;/li&gt;&lt;li&gt;Apple Earphones&lt;/li&gt;&lt;/ul&gt;&lt;br&gt;&lt;p&gt;&lt;font size=&quot;1px&quot;&gt;&lt;b&gt;Note:&lt;/b&gt;&lt;/font&gt;&lt;/p&gt;&lt;ul&gt;&lt;li&gt;&lt;font size=&quot;1px&quot;&gt;Wi-Fi Internet access is required for some features; broadband recommended; fees may apply. Some features, applications, and services are not available in all areas. Application availability and pricing are subject to change.&lt;/font&gt;&lt;/li&gt;&lt;li&gt;&lt;font size=&quot;1px&quot;&gt;1GB = 1 billion bytes; actual formatted capacity less.&lt;/font&gt;&lt;/li&gt;&lt;li&gt;&lt;font size=&quot;1px&quot;&gt;Requires a FaceTime-enabled Mac with an Internet connection or a FaceTime-enabled iOS device with a Wi-Fi connection. Not available in all areas.&lt;/font&gt;&lt;/li&gt;&lt;li&gt;&lt;font size=&quot;1px&quot;&gt;App count refers to the total number of apps worldwide.&lt;/font&gt;&lt;/li&gt;&lt;/ul&gt;&lt;br&gt;]]></string>
    <string name="sample_name">Better Homes and Gardens 4-Cube Organizer Bench, Multiple Finishes</string>
    <string name="sample_review_count">322 reviews</string>
    <string name="sample_price">$69.98</string>
</resources>
