<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProductDetailActivity"
    android:background="@color/color_white"
    android:layout_margin="@dimen/activity_margin">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sample_name"
            android:labelFor="@+id/item_image_view" />
        <RatingBar
            android:id="@+id/item_rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_name"
            android:progressTint="@color/colorText"
            android:numStars="5"
            android:rating="4.5"
            android:stepSize="0.5"
            />
        <TextView
            android:id="@+id/item_review_count"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin"
            app:layout_constraintStart_toEndOf="@id/item_rating_bar"
            app:layout_constraintTop_toBottomOf="@id/item_name"
            android:text="@string/sample_review_count"
            />

        <ImageView
            android:id="@+id/item_image_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="@dimen/image_detail_view_padding"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_rating_bar"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/placeholder"
            />
        <TextView
            android:id="@+id/item_price"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_image_view"
            android:text="@string/sample_price"/>

        <Button
            android:id="@+id/add_to_list_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_price"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/add_to_list"
            android:background="@color/colorAccent"
            android:textColor="@color/color_white"
            android:textStyle="bold"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/image_detail_view_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_to_list_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/about_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:text="@string/about_this_item"/>
        <TextView
            android:id="@+id/item_short_description"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_title"
            android:textColor="@color/colorText"
            android:text="@string/sample_short_description"/>
        <TextView
            android:id="@+id/item_long_description"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_short_description"
            android:textColor="@color/colorText"
            android:text="@string/sample_long_description"/>
    </android.support.constraint.ConstraintLayout>

</ScrollView>

